test/conformance/chainsaw/validating-policies/context/globalreference-missing-graceful/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-test-deployments
spec:
  apiCall:
    urlPath: "/apis/apps/v1/namespaces/test-globalcontext-missing/deployments"
    refreshInterval: 1h
  projections:
    - name: count
      jmesPath: "items | length(@)"
