test/conformance/chainsaw/validating-policies/context/globalreference-missing-graceful/pod-test-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-gctx
  namespace: test-globalcontext-missing
  labels:
    test: with-gctx-works
spec:
  containers:
  - name: test
    image: registry.k8s.io/pause:latest
    resources:
      requests:
        cpu: 10m
        memory: 10Mi
      limits:
        cpu: 10m
        memory: 10Mi
  terminationGracePeriodSeconds: 0
